@@ -32,7 +32,7 @@ import org.elasticsearch.script.TemplateScript;
 import java.io.Reader;
 import java.io.StringReader;
 import java.io.StringWriter;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -41,7 +41,7 @@ import static org.elasticsearch.core.Strings.format;
 /**
  * Main entry point handling template registration, compilation and
  * execution.
- *
+ * <p>
  * Template handling is based on Mustache. Template handling is a two step
  * process: First compile the string representing the template, the resulting
  * {@link Mustache} object can then be re-used for subsequent executions.
@@ -87,7 +87,7 @@ public final class MustacheScriptEngine implements ScriptEngine {
             TemplateScript.Factory compiled = params -> new MustacheExecutableScript(template, params);
             return context.factoryClazz.cast(compiled);
         } catch (MustacheException ex) {
-            throw new ScriptException(ex.getMessage(), ex, Collections.emptyList(), templateSource, NAME);
+            throw new ScriptException(ex.getMessage(), ex, List.of(), templateSource, NAME);
         }
 
     }
@@ -128,9 +128,9 @@ public final class MustacheScriptEngine implements ScriptEngine {
      * */
     private class MustacheExecutableScript extends TemplateScript {
         /** Factory template. */
-        private Mustache template;
+        private final Mustache template;
 
-        private Map<String, Object> params;
+        private final Map<String, Object> params;
 
         /**
          * @param template the compiled template object wrapper
